--- a/app/src/main/res/layout/activity_rfc_generator.xml
+++ b/app/src/main/res/layout/activity_rfc_generator.xml
@@ -143,4 +143,24 @@
         app:layout_constraintVertical_bias="0.022"
         />
 
+    <TextView
+        android:id="@+id/txtRfc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="500dp"
+        android:layout_marginLeft="25dp"
+        android:text="@string/resultado_rfc"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022"
+        tools:ignore="MissingConstraints"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
